cluster/apps/media/apps/immich/app/redis-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  namespace: media
spec:
  selector:
    app: immich-redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
  clusterIP: None
