cluster/apps/media/apps/immich/app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`immich.${domain_name}`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: immich-app
          namespace: media
          port: 2283
