cluster/apps/media/apps/immich/app/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: immich
  namespace: media
spec:
  hosts:
  - immich.${domain_name}
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: immich-app.media.svc.cluster.local
        port:
          number: 2283
    match:
    - authority:
        exact: immich.${domain_name}
      uri:
        prefix: /
